# otus

.github/workflows/: release.yml
homework0/src/: main.cpp
homework1/src/: CMakeLists.txt  ip_filter.cpp
homework2/src/: CMakeLists.txt  main.cpp  reserveAllocator.h  simpleContainer.h
homework3/src/: CMakeLists.txt  print_ip.cpp
homework4/src/: CMakeLists.txt  darkModeRender.h  defaultRender.h  document.h  documentSystem.h  documentSystemInstance.h  main.cpp  render.h
homework5/src/: CMakeLists.txt  main.cpp  matrix.h
homework6/src/: CMakeLists.txt  main.cpp
homework8/src/: CMakeLists.txt  async.cpp  async.h  main.cpp
